feat: sync security enhancements from NestFinder repo
- Add robots.txt for SEO and security
- Add HTTPS configuration support for production
- Add CSRF middleware (optional setup)
- Enhanced security headers in server.js (CSP, HSTS, cache control)
- Add security meta tags to all HTML files
- Add SRI integrity hashes for external resources
- Improve error handling and logging
- Update .gitignore for sensitive files (*.key, *.pem)
- Environment-aware API URLs in frontend
- Remove debug console.error statements

--- a/.gitignore
+++ b/.gitignore
@@ -9,9 +9,16 @@ yarn.lock
 # Environment variables
 .env
 .env.local
+.env.*.local
 .env.development.local
 .env.test.local
 .env.production.local
+
+# Sensitive files
+private.key
+*.crt
+*.pem
+*.key
 
 # macOS
 .DS_Store
